# bevy-voxel-engine

./: Cargo.toml  readme.md
.cargo/: config.toml
aseprite_projects/: blocks.aseprite
assets/shaders/: voxel_atlas.wgsl
src/: lib.rs  main.rs
src/plugins/: mod.rs
src/plugins/asset_loader/: assets.rs  mod.rs
src/plugins/character/: mod.rs
src/plugins/debug/: mesh_debug.rs  mod.rs
src/plugins/world/: blocks.rs  chunk.rs  material.rs  mod.rs  voxel.rs  voxel_picking.rs
src/plugins/world/events/: mod.rs  voxel_clicked.rs
src/plugins/world/meshers/: mod.rs  naive_mesher.rs
src/state/: loading_state.rs  mod.rs
