[package]
name = "aettesaga"
version = "0.1.0"
publish = false
authors = ["Sindre B <mail@sindrebakken.dev>"]
edition = "2024"
exclude = ["assets"]

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"

[features]
dev = ["bevy/dynamic_linking", "bevy/debug"]

[dependencies]
bevy = { version = "0.18.0", features = ["free_camera"] }
log = { version = "*", features = [
	"max_level_debug",
	"release_max_level_warn",
] }
